--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "googleapis": "^118.0.0"
+    "googleapis": "^118.0.0",
+    "multer": "^1.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
